feat: fcu improvements for new model

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -1,4 +1,4 @@
-// FlyByWire A32NX Panel Configuration File
+; FlyByWire A32NX Panel Configuration File
 
 [Default View]
 X = 0
@@ -34,8 +34,8 @@ texture = $EWD
 htmlgauge00 = A32NX/EWD/ewd.html?Index=1, 0,0,768,768
 
 [VCockpit04]
-size_mm = 768,768 #TODO FIXME - Should be 768,768
-pixel_size = 768,768 #TODO FIXME - Should be 768,768
+size_mm = 768,768
+pixel_size = 768,768
 texture = $EICAS2
 
 htmlgauge00 = A32NX/SD/sd.html, 0,0,768,768
@@ -68,11 +68,11 @@ texture = $FMC
 htmlgauge00 = Airliners/FlyByWire_A320_Neo/CDU/A320_Neo_CDU.html, 0,0,1024,1024
 
 [VCockpit09]
-size_mm = 1280,1280
-pixel_size = 1280,1280
+size_mm = 1280,640
+pixel_size = 1280,640
 texture = $FCU
 
-htmlgauge00 = Airliners/FlyByWire_A320_Neo/FCU/A320_Neo_FCU.html, 0,0,1280,1280
+htmlgauge00 = Airliners/FlyByWire_A320_Neo/FCU/A320_Neo_FCU.html, 0,0,1280,640
 
 [VCockpit10]
 size_mm = 432,512
