--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
@@ -163,16 +163,18 @@ lightdef.77 = Type:4#Index:8#LocalPosition:35,0,8.3#LocalRotation:80,0,0#EffectF
 lightdef.78 = Type:4#Index:8#LocalPosition:33.8,1.5,9.9#LocalRotation:110,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientOverhead#PotentiometerIndex:86           				; OVHD AMB CB
 
 ; FCU INTEG LT AMBIENT
-lightdef.79 = Type:12#Index:5#LocalPosition:38.52,-0.9,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84    					; FCU AMB 1
-lightdef.80 = Type:12#Index:5#LocalPosition:38.52,-0.740,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84     					; FCU AMB 2
-lightdef.81 = Type:12#Index:5#LocalPosition:38.52,-0.56,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84     					; FCU AMB 3
-lightdef.82 = Type:12#Index:5#LocalPosition:38.52,-0.33,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84      					; FCU AMB 4
-lightdef.83 = Type:12#Index:5#LocalPosition:38.52,-0.18,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84    					; FCU AMB 5
-lightdef.84 = Type:12#Index:5#LocalPosition:38.52,0.170,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84     					; FCU AMB 6
-lightdef.85 = Type:12#Index:5#LocalPosition:38.52,0.35,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84     					; FCU AMB 7
-lightdef.86 = Type:12#Index:5#LocalPosition:38.52,0.56,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84      					; FCU AMB 8
-lightdef.87 = Type:12#Index:5#LocalPosition:38.52,0.74,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84      					; FCU AMB 9
-lightdef.88 = Type:12#Index:5#LocalPosition:38.52,0.90,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84      					; FCU AMB 10
+lightdef.79 = Type:12#Index:5#LocalPosition:38.3775,-0.907405,6.26354#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84    					; FCU AMB 1
+; lights above the ND knobs are disabled as there is no screen to bleed light above them
+lightdef.80 = Type:0#Index:5#LocalPosition:38.3775,-0.738063,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84     					; FCU AMB 2
+lightdef.81 = Type:0#Index:5#LocalPosition:38.3775,-0.559805,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84     					; FCU AMB 3
+lightdef.82 = Type:12#Index:5#LocalPosition:38.3775,-0.329049,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84      					; FCU AMB 4
+lightdef.83 = Type:12#Index:5#LocalPosition:38.3775,-0.180246,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84    					; FCU AMB 5
+lightdef.84 = Type:12#Index:5#LocalPosition:38.3775,0.159389,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84     					; FCU AMB 6
+lightdef.85 = Type:12#Index:5#LocalPosition:38.3775,0.346189,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84     					; FCU AMB 7
+; lights above the ND knobs are disabled as there is no screen to bleed light above them
+lightdef.86 = Type:0#Index:5#LocalPosition:38.3775,0.553744,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84      					; FCU AMB 8
+lightdef.87 = Type:0#Index:5#LocalPosition:38.3775,0.732994,6.31#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84      					; FCU AMB 9
+lightdef.88 = Type:12#Index:5#LocalPosition:38.3775,0.902528,6.26354#LocalRotation:-230,0,0#EffectFile:A32NX_Cockpit_EmissiveAmbientFCU#PotentiometerIndex:84      					; FCU AMB 10
 
 ; PEDESTAL INTEG LT AMBIENT
 lightdef.89 = Type:4#Index:7#LocalPosition:38.60,-0.260,4.40#LocalRotation:-10,0,180#EffectFile:A32NX_Cockpit_EmissiveAmbientPedSwitches#PotentiometerIndex:85     			; PED MID SWITCHES 1
@@ -227,8 +229,8 @@ lightdef.131 = Type:12#Index:3#LocalPosition:38.6,0,4.6#LocalRotation:0,0,0#Effe
 lightdef.132 = Type:12#Index:4#LocalPosition:38.4,2.58,4.59#LocalRotation:0,0,0#EffectFile:A32NX_Cockpit_MainPanelFloodAmbientEnd#PotentiometerIndex:83   					; F/O AMB
 
 ; CPT / F/O TABLE LT
-lightdef.133 = Type:12#Index:1#LocalPosition:38.5,-1.825,5.98#LocalRotation:85,0,0#EffectFile:A32NX_Cockpit_MainPanelFlood#PotentiometerIndex:10  							; CPT TABLE LT
-lightdef.134 = Type:12#Index:2#LocalPosition:38.5,1.76,5.98#LocalRotation:85,0,0#EffectFile:A32NX_Cockpit_MainPanelFlood#PotentiometerIndex:11    							; F/O TABLE LT
+lightdef.133 = Type:12#Index:1#LocalPosition:38.414,-1.843,5.955#LocalRotation:85,0,0#EffectFile:A32NX_Cockpit_MainPanelFlood#PotentiometerIndex:10  							; CPT TABLE LT
+lightdef.134 = Type:12#Index:2#LocalPosition:38.407,1.841,5.965#LocalRotation:85,0,0#EffectFile:A32NX_Cockpit_MainPanelFlood#PotentiometerIndex:11    							; F/O TABLE LT
 
 ; CTP / F/O CONSOLE/FLOOR LT
 lightdef.135 = Type:4#Index:3#LocalPosition:37.4,-3.67,5.4#LocalRotation:90,0,70#EffectFile:A32NX_Cockpit_Console#PotentiometerIndex:8  									; CONSOLE/FLOOR LT CPT 1
