--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/_FlyByWire_A320_NEO-CHRISTMAS/aircraft.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/_FlyByWire_A320_NEO-CHRISTMAS/aircraft.cfg
@@ -9,33 +9,8 @@ base_container = "..\FlyByWire_A320_NEO"
 
 [FLTSIM.0]
 title = "Airbus A320Neo FlyByWire Simulations 'Christmas'" ; Variation name
-model = "" ; model folder
-panel = "" ; panel folder
-sound = "" ; sound folder
-texture = "FBW" ; texture folder
-kb_checklists = "" ; Procedures/Checklist sibling file name
-kb_reference = "Boeing747-400_ref" ; Reference information sibling file name
-description = "TT:AIRCRAFT.DESCRIPTION" ; Variation description.
-wip_indicator = 2 ; know if the variation is good to go or still WIP : -1=Disabled, 0=Rough, 1=1st Pass, 2=Finished
-ui_manufacturer = "Airbus" ; e.g. Boeing, Cessna
-ui_type = "A320-271N" ; e.g. 747-400, 172
 ui_variation = "FlyByWire Simulations 'Christmas'" ; e.g. World Air, IFR Panel
-ui_typerole = "Commercial Airliner" ; e.g. Single Engine Prop, Twin Engine Prop, Rotorcraft, etc
-ui_createdby = "SilkySmooth" ; e.g. Asobo Studio, Microsoft, FSAddonCompany, etc
-ui_thumbnailfile = "" ; app relative path to ThumbNail image file
-ui_certified_ceiling = 39800 ; service ceiling / max certified operating altitude (ft)
-ui_max_range = 3500 ; max distance the aircraft can fly between take-off and landing in (NM)
-ui_autonomy = 7 ; max duration the aircraft can fly between take-off and landing in (Hrs)
-ui_fuel_burn_rate = 5300 ; average fuel consumption per hour (lbs/hr) - reminder: fuel density is ~6.7lbs per US gallon
-atc_id_color = "00000000" ; color for the tail number : i.e. "#ffff00ff"
-atc_id_font = "" ; font for the tail number
-atc_id = "‎‎" ; tail number
-atc_id_enable = 0 ; enable tail number
-atc_airline = "" ; airline name
-atc_flight_number = "" ; flight number
-atc_heavy = 0 ; heavy?
-atc_parking_types = "GATE,RAMP,CARGO" ; "ANY" / "RAMP" / "CARGO" / "MIL_CARGO" / "MIL_COMBAT" / "GATE" / "DOCK"
-atc_parking_codes = "" ; Comma separated and may be as small as one character each
-icao_airline = ""
-isAirTraffic = 0 ; Is the plane usable for air traffic
-isUserSelectable = 1 ; Is the plane selectable by the user
+texture = "FBW" ; texture folder
+model = "FBW" ; model folder
+atc_id = "‎‎A32NX" ; tail number
+atc_airline = "FBWSIM" ; airline name
