--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
@@ -231,7 +231,7 @@ fly_by_wire = 0 ; Fly-by-wire available true/false
 elevator_elasticity_table = 0:1, 400:1
 aileron_elasticity_table = 0:1, 400:1
 rudder_elasticity_table = 0:1, 85:1, 110:0.7, 445:0.136
-elevator_trim_elasticity_table = 0:0.3, 100:0.35, 120:1, 400:1
+elevator_trim_elasticity_table = 0:0.3, 58:0.75, 100:0.75, 120:1, 400:1
 ;controls_reactivity_scalar = 1 ; Reactivity scalar for all controls
 
 [AERODYNAMICS]
