--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
       A32NX_INSTRUMENTS_BUILD_WORKERS: 2
       STABLE_PRE_RELEASE_ID: 66067814
       STABLE_PRE_RELEASE_TAG: assets/stable
-      STABLE_ZIP_NAME: A32NX-stable.zip
+      STABLE_ZIP_NAME: A32NX-stable.7z
       BUILD_DIR_NAME: stable
     steps:
       - name: Checkout source
@@ -42,7 +42,7 @@ jobs:
           node ./scripts/install-source_a32nx.js
           mkdir ./${{ env.BUILD_DIR_NAME }}
           cd ./fbw-a32nx/out/
-          zip -r ../../${{ env.BUILD_DIR_NAME }}/${{ env.STABLE_ZIP_NAME }} ./flybywire-aircraft-a320-neo/
+          7z a -t7z -m0=lzma2 -mx=7  ../../${{ env.BUILD_DIR_NAME }}/${{ env.STABLE_ZIP_NAME }} ./flybywire-aircraft-a320-neo/
           cd ../..
       - name: Create Release
         id: create_release
