feat(fm/fbw): enable CFD simulation and adapted gyro stability

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
@@ -235,6 +235,11 @@ elevator_trim_elasticity_table = 0:0.3, 58:0.75, 100:0.75, 120:1, 400:1
 ;controls_reactivity_scalar = 1 ; Reactivity scalar for all controls
 
 [AERODYNAMICS]
+CFD_EnableSimulation = 1
+CFD_ReinjectBody = 1
+CFD_ReinjectRotors = 0
+CFD_ReinjectVTailX = 1
+CFD_ReinjectHTailY = 1
 lift_coef_pitch_rate = -57.116 ; The change in lift per change in pitch rate
 lift_coef_daoa = 0 ; lift per change in angle of attack rate
 lift_coef_delta_elevator = -1.652 ; The change in lift per change in elevator deflection
@@ -341,12 +346,12 @@ elevator_maxangle_scalar = 0.465
 aileron_effectiveness = 0.95
 rudder_effectiveness = 0.21
 rudder_maxangle_scalar = 1
-pitch_stability = 4
-roll_stability = 0.65
+pitch_stability = 1
+roll_stability = 1
 yaw_stability = 1
-pitch_gyro_stability = 6
-roll_gyro_stability = 4.5
-yaw_gyro_stability = 1
+pitch_gyro_stability = 0
+roll_gyro_stability = 0
+yaw_gyro_stability = 0
 elevator_trim_effectiveness = 3.89
 aileron_trim_effectiveness = 1
 rudder_trim_effectiveness = 0
