Added/Updated Copywrite in base files

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/engines.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/engines.cfg
@@ -1,3 +1,7 @@
+; Copyright (c) 2023-2024 FlyByWire Simulations
+; SPDX-License-Identifier: GPL-3.0
+
+
 ; TazX - First attempt at the Trent 972B-84
 ; LP - Real N1 - Sim N1 - 2,900RPM 97.2%/ 97.2% Max (TO/ Cont)
 ; IP - Real N2 - Sim XX - 8,300RPM 98.7%/ 97.8% Max (TO/ Cont)
