--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -1,3 +1,6 @@
+; Copyright (c) 2023-2024 FlyByWire Simulations
+; SPDX-License-Identifier: GPL-3.0
+
 ; A380 MSN 225 - WV03 A380-842
 ; 07 Mar 2023 Fuel System Update
 
@@ -625,7 +628,7 @@ max_gear_extended = 250 ; (Kts)
 ;3  Pos - Y - Coordinate in ft of the point relative to aircraft Datum Reference Point, on the bottom-to-top (Y) axis.
 ;4  Type - Integer corresponding to an enum, determining the type of the point (see the Type, Position, and Orientation section for more details). - 0 = Main exit 1 = Cargo exit/door 2 = Emergency exit 3 = Fuel hose 4 = Ground Power cable 5 = Air Start Unit 6 = Tailhook 99 = Unknown (used for errors)
 ;5 	Orientation Pitch - Pitch in degrees, of the point orientation, where 0° means horizontal.
-;6 	Orientation Bank - Bank in degrees, of the point orientation (currently unused, please set 0 here).	
+;6 	Orientation Bank - Bank in degrees, of the point orientation (currently unused, please set 0 here).
 ;7 	Orientation Heading - Heading - Heading, in degrees, of the point orientation (0° means same heading as the aircraft).
 ;8 	Jetway Left Bend - A percentage value for the jetway left bend. See the Jetway Values section for more information.
 ;9 	Jetway Left Deployment - A value, in degrees, for the jetway left deployment. See the Jetway Values section for more information.
