--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/model/model.CFG
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/model/model.CFG
@@ -1,3 +1,6 @@
+; Copyright (c) 2023-2024 FlyByWire Simulations
+; SPDX-License-Identifier: GPL-3.0
+
 ; Reference LOD implementation, please keep these comments (for now).
 
 [model.options]
