--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -1,6 +1,7 @@
+; Copyright (c) 2023-2024 FlyByWire Simulations
+; SPDX-License-Identifier: GPL-3.0
+
 // Panel Configuration File
-// Boeing 747-400
-// Copyright (c) 1999-2003 Microsoft Corporation.  All rights reserved.
 
 [Default View]
 X=0
