fix(a380x): fixed missing a380x PR contents (#8380)
* Recopied files from a380x repo before move to ensure latest PR changes are included.

* Added/Updated Copywrite in base files

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/aircraft.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/aircraft.cfg
@@ -1,3 +1,6 @@
+; Copyright (c) 2023-2024 FlyByWire Simulations
+; SPDX-License-Identifier: GPL-3.0
+
 [VERSION]
 major =1
 minor =0
@@ -37,6 +40,7 @@ SMALL_PUSHBACK =0
 MARSHALLER =1
 JETWAY =1
 
+
 [EFFECTS]
 wake =fx_wake, 0
 water =fx_spray, 0
@@ -71,14 +75,18 @@ WaterBallastDrain=fx_WaterBallastDrain, 0
 PistonFailure=fx_PistonFailure, 1
 windshield_rain_effect_available=1
 
+
 [LOADING]
 ImageName = LOADING_FREEFLIGHT
-Tips0 = A380 by FlyByWire
-Tips1 = Thanks to the whole FBW Team
-Tips2 = Fly By Wire Simulations
-Tips3 = Since 2020
-Tips4 = First Freeware A380 for MSFS2020
-Tips5 = Made by Community for the Community
+Tips0 = TT:A380X.LOADING.TIPS.A380_001
+Tips1 = TT:A380X.LOADING.TIPS.A380_002
+Tips2 = TT:A380X.LOADING.TIPS.A380_003
+Tips3 = TT:A380X.LOADING.TIPS.A380_004
+Tips4 = TT:A380X.LOADING.TIPS.A380_005
+Tips5 = TT:A380X.LOADING.TIPS.A380_006
+Tips6 = TT:A380X.LOADING.TIPS.A380_007
+Tips7 = TT:A380X.LOADING.TIPS.A380_008
+Tips8 = TT:A380X.LOADING.TIPS.A380_009
 
 [STALL PROTECTION]
 stall_protection = 1 ; Alpha Protection
@@ -95,7 +103,6 @@ right_hand_target=""
 left_hand_target=""
 left_foot_target=""
 right_foot_target=""
-
 [FLTSIM.0]
 Title="Airbus A380-842 FlyByWire"
 Model=""
@@ -129,5 +136,5 @@ isUserSelectable=1
 isFlyable=1
 canBeUsedByAITraffic=1
 Effects=""
-atc_parking_types="GATE,RAMP,CARGO"
+atc_parking_types="GATE,RAMP"
 atc_parking_codes=""
