--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -1,3 +1,6 @@
+; Copyright (c) 2023-2024 FlyByWire Simulations
+; SPDX-License-Identifier: GPL-3.0
+
 ; A380 MSN 225 - WV03 A380-842
 ; 07 Mar 2023 Fuel System Update
 
@@ -26,8 +29,8 @@ activate_cg_limit_based_on_mach = 0 ; Activate cg limitation depending on mach v
 max_number_of_stations = 19 ; Number of payload stations - per pax 185 lbs
 ; PAX
 ; MAIN DECK FWD: 88 seats (Max = 16296.5 LBS)
-station_load.0 = 8148.3, 70.7, 0, 7.1, MAIN DECK FWD A, 3; 42 PAX
-station_load.1 = 8148.3, 70.7, 0, 7.1, MAIN DECK FWD B, 3; 42 PAX
+station_load.0 = 8148.3, 70.7, 0, 7.1, MAIN DECK FWD A, 3; 44 PAX
+station_load.1 = 8148.3, 70.7, 0, 7.1, MAIN DECK FWD B, 3; 44 PAX
 ; MAIN DECK MID 1: 135 seats (Max = 25000.4 LBS)
 station_load.2 = 7777.9, 25.6, 0, 7.1, MAIN DECK MID 1A, 3; 42 PAX
 station_load.3 = 9259.4, 25.6, 0, 7.1, MAIN DECK MID 1B, 3; 50 PAX
@@ -87,10 +90,10 @@ max_castering_angle = 1.309 ; Defines the maximum angle a free castering wheel c
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
 point.0 = 1, 100.0, 0, -15.8, 800, 0, 2.34, 75, 1.8, 1.7, 0.2, 17, 15, 0, 0, 0, 2
-point.1 = 1, -6.1, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
-point.2 = 1, -6.1, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.3 = 1, 5.7, -20.5, -16.272573, 1200, 2, 2, 6.5, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.4 = 1, 5.7, 20.5, -16.272573, 1200, 2, 2, 6.5, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.1 = 1, -11.13, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
+point.2 = 1, -11.13, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.3 = 1, 2.36, -20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.4 = 1, 2.36, 20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
@@ -465,6 +468,7 @@ rudder_elasticity_table = 0:1, 400:1
 elevator_trim_elasticity_table = 0:1, 400:1
 ;controls_reactivity_scalar = 1 ; Reactivity scalar for all controls
 
+
 [AERODYNAMICS]
 lift_coef_pitch_rate = -47.338 ; The change in lift per change in pitch rate
 lift_coef_daoa = 0 ; lift per change in angle of attack rate
@@ -618,17 +622,49 @@ best_glide = 0 ; Best Glide (Kts)
 max_gear_extended = 250 ; (Kts)
 
 [INTERACTIVE POINTS]
-number_of_interactive_points = 10
-interactive_point.0 = 0.4, 27.93, -6.05, 3.02, 0, 0, 0, -86, 72, 16, 85, 3, -2, 33
-interactive_point.1 = 0.4, 27.93, 6.05, 3.02, 0, 0, 0, 86, 85, 3, 72, 16, -2, 33
-interactive_point.2 = 0.4, -53, -5.2, 3, 0, 0, 0, -103, 0, 0, 0, 0, 0, 0
-interactive_point.3 = 0.4, -53, 5.2, 3, 0, 0, 0, 103, 0, 0, 0, 0, 0, 0
-interactive_point.4 = 0.4, -29.5, 2, -1.8, 1, 0, 0, 90, 0, 0, 0, 0, 0, 0
-interactive_point.5 = 0.4, 18, 1.93, -1.9, 1, 0, 0, 90, 0, 0, 0, 0, 0, 0
-interactive_point.6 = 0.4, -4, -6, 6.2, 2, 0, 0, -90, 0, 0, 0, 0, 0, 0
-interactive_point.7 = 0.4, -4, 6, 6.2, 2, 0, 0, 90, 0, 0, 0, 0, 0, 0
-interactive_point.8 = 0, 36.3, 10.78, -5.18, 4, 0, 0, 45, 0, 0, 0, 0, 0, 0
-interactive_point.9 = 0, 0, -54.59, -7.57, 3, 0, 0, -90, 0, 0, 0, 0, 0, 0
+;0 	Open Close Rate - Percent per second of animation of the interactive point (used mostly for doors).
+;1  Pos - Z - Coordinate in ft of the point relative to aircraft Datum Reference Point, on the back-to-front (Z) axis.
+;2  Pos - X - Coordinate in ft of the point relative to aircraft Datum Reference Point, on the left-to-right (X) axis.
+;3  Pos - Y - Coordinate in ft of the point relative to aircraft Datum Reference Point, on the bottom-to-top (Y) axis.
+;4  Type - Integer corresponding to an enum, determining the type of the point (see the Type, Position, and Orientation section for more details). - 0 = Main exit 1 = Cargo exit/door 2 = Emergency exit 3 = Fuel hose 4 = Ground Power cable 5 = Air Start Unit 6 = Tailhook 99 = Unknown (used for errors)
+;5 	Orientation Pitch - Pitch in degrees, of the point orientation, where 0° means horizontal.
+;6 	Orientation Bank - Bank in degrees, of the point orientation (currently unused, please set 0 here).
+;7 	Orientation Heading - Heading - Heading, in degrees, of the point orientation (0° means same heading as the aircraft).
+;8 	Jetway Left Bend - A percentage value for the jetway left bend. See the Jetway Values section for more information.
+;9 	Jetway Left Deployment - A value, in degrees, for the jetway left deployment. See the Jetway Values section for more information.
+;10 Jetway Right Bend - A percentage value for the jetway right bend. See the Jetway Values section for more information.
+;11 Jetway Right Deployment - A value, in degrees, for the jetway right deployment. See the Jetway Values section for more information.
+;12 Jetway Top Horizontal - A value, between -100 and 100, for the jetway horizontal line. See the Jetway Values section for more information.
+;13 Jetway Top Vertical - A value, between -100 and 100, for the jetway vertical line. See the Jetway Values section for more information.
+; The last six values of an interactive_point are used to properly animate the hood of a jetway in order to best match the shape of the aircraft. This also means that those values are only useful for interactive points of type 0 - Main exit - and only for aircrafts suitable for jetway interaction (defined in the Services section of the Aircraft Editor Aircraft Tab or the [SERVICES] section of aircraft.cfg).
+; Those six values are matched with the six animations for the jetway hood. The left and right deployment values are angles in degrees to incline the base of the jetway hood (with 0 being the default vertical position). The left and right bend values are percentages of the bending animation (0 to 100, where 0 is the default state). The top horizontal and vertical values are signed percentages of the corresponding animations (-100 to 100, where 0 is the default state).
+
+number_of_interactive_points = 20
+; Main Deck
+interactive_point.0 = 0.4, 94.75, -9.75, 3.32, 0, 0, 0, -79, 72, 0, 85, 0, -2, 33
+interactive_point.1 = 0.4, 94.75, 9.75, 3.32, 0, 0, 0, 79, 85, 1, 72, 2, -2, 33
+interactive_point.2 = 0.4, 60.7, -10.75, 3.32, 0, 0, 0, -90, 72, 0, 85, 0, -2, 33
+interactive_point.3 = 0.4, 60.7, 10.75, 3.32, 2, 0, 0, 90, 85, 1, 72, 2, -2, 33
+interactive_point.4 = 0.4, 10, -10.75, 3.32, 2, 0, 0, -90, 72, 0, 85, 0, -2, 33
+interactive_point.5 = 0.4, 10, 10.75, 3.32, 2, 0, 0, 90, 85, 1, 72, 2, -2, 33
+interactive_point.6 = 0.4, -32, -10.75, 3.32, 0, 0, 0, -90, 72, 0, 85, 0, -2, 33
+interactive_point.7 = 0.4, -32, 10.75, 3.32, 0, 0, 0, 90, 85, 1, 72, 2, -2, 33
+interactive_point.8 = 0.4, -60, -10, 3, 0, 0, 0, -103, 0, 0, 0, 0, 0, 0
+interactive_point.9 = 0.4, -60, 10, 3, 0, 0, 0, 103, 0, 0, 0, 0, 0, 0
+; Upper Deck
+interactive_point.10 = 0.4, 47, -10.75, 12.75, 0, 0, 0, -90, 72, 0, 85, 0, -2, 33
+interactive_point.11 = 0.4, 47, 10.75, 12.75, 2, 0, 0, 90, 85, 1, 72, 2, -2, 33
+interactive_point.12 = 0.4, -17.5, -10.75, 12.75, 2, 0, 0, -90, 72, 0, 85, 0, -2, 33
+interactive_point.13 = 0.4, -17.5, 10.75, 12.75, 2, 0, 0, 90, 85, 1, 72, 2, -2, 33
+interactive_point.14 = 0.4, -46, -10.75, 12.75, 2, 0, 0, -90, 72, 0, 85, 0, -2, 33
+interactive_point.15 = 0.4, -46, 10.75, 12.75, 2, 0, 0, 90, 85, 1, 72, 2, -2, 33
+; Cargo
+interactive_point.16 = 0.4, 76.5, 6.5, -3.5, 1, 0, 0, 90, 0, 0, 0, 0, 0, 0
+interactive_point.17 = 0.4, -43, 6.5, -3.5, 1, 0, 0, 90, 0, 0, 0, 0, 0, 0
+; Fuel
+interactive_point.18 = 0, 20, -64.59, -12.5, 3, 0, 0, -90, 0, 0, 0, 0, 0, 0
+; Ground Power
+interactive_point.19 = 0, 105, 10, -12.5, 4, 0, 0, 45, 0, 0, 0, 0, 0, 0
 
 [STALL PROTECTION]
 stall_protection = 0	    ; Alpha Protection
