--- a/fbw-a32nx/src/systems/instruments/src/ND/config.json
+++ b/fbw-a32nx/src/systems/instruments/src/ND/config.json
@@ -1,4 +1,7 @@
 {
   "index": "./instrument.tsx",
-  "isInteractive": false
+  "isInteractive": false,
+  "extraDeps": [
+    "fbw-common/src/systems/instruments/src/ND"
+  ]
 }
