first try visual adjustement

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -90,10 +90,10 @@ max_castering_angle = 1.309 ; Defines the maximum angle a free castering wheel c
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
 point.0 = 1, 100.0, 0, -15.8, 800, 0, 2.34, 75, 1.8, 1.7, 0.2, 17, 15, 0, 0, 0, 2
-point.1 = 1, -11.13, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
-point.2 = 1, -11.13, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.3 = 1, 2.36, -20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.4 = 1, 2.36, 20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.1 = 1, -6, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
+point.2 = 1, -6, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.3 = 1, 6, -20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.4 = 1, 6, 20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
@@ -406,31 +406,31 @@ wing_area = 9096.0 ; Wing area S (SQUARE FEET)
 wing_span = 261.65 ; Wing span b (FEET)
 wing_root_chord = 57.97 ; Wing root chord croot (FEET)
 wing_camber = 1 ; (DEGREES) (Unkown - estimated value)
-wing_thickness_ratio = 0.08 ; Local thickness is local_chord(x)*wing_thickness_ratio, x = lateral coord
-wing_dihedral = 5.6 ; Dihedral angle Lambda (DEGREES)
+wing_thickness_ratio = 0.05 ; Local thickness is local_chord(x)*wing_thickness_ratio, x = lateral coord
+wing_dihedral = 6.5 ; Dihedral angle Lambda (DEGREES)
 wing_incidence = 2 ; Wing incidence (DEGREES) (unknown)
 wing_twist = -5.5 ; Wing twist epsilon (DEGREES)
 oswald_efficiency_factor = 0.70 ; Wing Oswald efficiency factor e (non dimensional)
 wing_winglets_flag = 0 ; Has winglets true/false (MSFS doesn't use this parameter)
-wing_sweep = 33.5 ; Wing sweep (DEGREES)
+wing_sweep = 35 ; Wing sweep (DEGREES)
 ;wing_pos_apex_lon = 0 ; Longitudinal (z) position of wing apex w.r.t reference datum (FEET) (not used)
-wing_pos_apex_vert = 3.26 ; Vertical (y) position of wing apex w.r.t reference datum (FEET) (estimated from mesh drawing)
-htail_area = 1603 ; Horizontal tail area (SQUARE FEET)
+wing_pos_apex_vert = -2 ; Vertical (y) position of wing apex w.r.t reference datum (FEET) (estimated from mesh drawing)
+htail_area = 2300 ; Horizontal tail area (SQUARE FEET) original 1603
 htail_span = 99.64 ; Horizontal tail span (FEET)
-htail_pos_lon = -95.6 ; Longitudinal (z) position of horizontal tail  w.r.t reference datum (FEET) -76.6
+htail_pos_lon = -105 ; Longitudinal (z) position of horizontal tail  w.r.t reference datum (FEET) -76.6
 htail_pos_vert = 14.8 ; Vertical (y) position of horizontal tail  w.r.t reference datum (FEET) 13.8 11.35
 htail_incidence = 0 ; Horizontal tail incidence (DEGREES)
-htail_sweep = 30 ; Horizontal tail sweep angle (DEGREES)
-htail_thickness_ratio = 0.04 ; Local thickness is local_chord(x)*htail_thickness_ratio, x = lateral coord
-vtail_area = 2006.4 ; Vertical tail area (SQUARE FEET)
-vtail_span = 47.87 ; Vertical tail span (FEET)
+htail_sweep = 38 ; Horizontal tail sweep angle (DEGREES)
+htail_thickness_ratio = 0.02 ; Local thickness is local_chord(x)*htail_thickness_ratio, x = lateral coord
+vtail_area = 2800.4 ; Vertical tail area (SQUARE FEET)
+vtail_span = 40.87 ; Vertical tail span (FEET)
 vtail_sweep = 45 ; Vertical tail sweep angle (DEGREES)
-vtail_pos_lon = -61.5 ; Longitudinal (z) position of vertical tail  w.r.t reference datum (FEET)
-vtail_pos_vert = 20.3 ; Vertical (y) position of vertical tail  w.r.t reference datum (FEET)
-vtail_thickness_ratio = 0.04 ; Local thickness is local_chord(x)*vtail_thickness_ratio, x = lateral coord
+vtail_pos_lon = -90.5 ; Longitudinal (z) position of vertical tail  w.r.t reference datum (FEET)
+vtail_pos_vert = 37 ; Vertical (y) position of vertical tail  w.r.t reference datum (FEET)
+vtail_thickness_ratio = 0.02 ; Local thickness is local_chord(x)*vtail_thickness_ratio, x = lateral coord
 fuselage_length = 230.97 ; Nose to tail (FEET)
-fuselage_diameter = 27.8; (is 23.43 horizontally, but 27.6 to 28.1 vertically)
-fuselage_center_pos = -0.1, 0, 7.1
+fuselage_diameter = 25; (is 23.43 horizontally, but 27.6 to 28.1 vertically)
+fuselage_center_pos = 10, 0, 7.1
 elevator_area = 593 ; Elevator area (SQUARE FEET)
 aileron_area = 258 ; Elevator area (SQUARE FEET)
 rudder_area = 416.6 ; Elevator area (SQUARE FEET)
