--- a/.github/workflows/pr-target.yml
+++ b/.github/workflows/pr-target.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   main:
-    name: Validate title semantics.
+    name: Validate title semantics
     runs-on: ubuntu-latest
     steps:
       - uses: amannn/action-semantic-pull-request@v5
