ci: separate out dependencies install

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -64,9 +64,11 @@ jobs:
           echo LOCALAZY_READ_KEY=${{ secrets.LOCALAZY_READ_KEY }} >> .env
           echo VITE_BUILD=false >> .env
           cat fbw-a32nx/.env
-      - name: Build A32NX
+      - name: Install dependencies
         run: |
           ./scripts/dev-env/run.sh ./scripts/setup.sh --clean
+      - name: Build A32NX
+        run: |
           ./scripts/dev-env/run.sh ./scripts/build_a32nx.sh --no-tty -j 4
           rm -rf fbw-a32nx/src
           docker system prune -af
@@ -104,9 +106,11 @@ jobs:
           echo LOCALAZY_READ_KEY=${{ secrets.LOCALAZY_READ_KEY }} >> .env
           echo VITE_BUILD=false >> .env
           cat fbw-a380x/.env
-      - name: Build A380X
+      - name: Install dependencies
         run: |
           ./scripts/dev-env/run.sh ./scripts/setup.sh --clean
+      - name: Build A380X
+        run: |
           ./scripts/dev-env/run.sh ./scripts/build_a380x.sh --no-tty -j 4
           rm -rf fbw-a380x/src
           docker system prune -af
